--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,172 @@
-<div class="wrapper">
+<%= content_for :script do %>
+  <%= javascript_include_tag "_course_show" %>
+<%end%>
+
+<div class="main-content">
+  <div class="top-content">
+    <div class="left-content">
+      <div class="course-image">
+        <%= image_tag("course-show.png")%>
+        <div class="course-and-score">
+          <%= link_to "课后作业", "#", class: "course"%>
+          <%= link_to "成绩查询", "#", class: "score"%>
+        </div>
+      </div>
+    </div>
+    <div class="right-content">
+      <h1>IOS图形界面开发</h1>
+      <div class="collect-zan-btns">
+        <%= link_to "", class: "btn btn-default " do %>
+          <span class="glyphicon glyphicon-star">取消收藏</span>
+        <%end%>
+        <%= link_to "", class: "btn btn-default" do %>
+          <span class="glyphicon glyphicon-heart">360个赞</span>
+        <%end%>
+      </div>
+      <ul class="course-main">
+        <li class="course-info">
+          <span class="title">课程简介</span>
+          <span class="content">《iOS图形界面开发》是计算机软件应用专业的重点骨干课程，通过本课程的学习，学生能够学习到iOS
+项目开发必备的知识和技能：图形界面设计思想，Objective-C编程技术，Socket、iCloud等网络连接技术，XML、
+JSON数据处理技术，Cocos2d游戏编程技术，Xcode、Interface Builder、iOS模拟器、调试器、Instruments等开发
+工具的使用。本课程共包含16个项目内容。内容安排强调基本概念、技术和方法的阐述，注重知识联系实际操作。每一部分都列举许多经典实例、实用操作题，操作题内容由浅入深，引导学员利用本项目的知识点进行思考和程序设计，利于学员提高解决实际问题的能力。初学者可根据情况另外，本课程还配有电子版实验指导手册可供下载，通过应用实例的分析和上机实践培养和提高学员iOS图形界面开发应用能力和解决实际问题的能力，该实验手册也可以作为开放式实验、家庭作业以及自学用。</span>
+        </li>
+        <li class="teach-team">
+          <p class="title">教学团队</p>
+          <div class="teachers">
+            <div class="teacher-info">
+               <%= image_tag("teach-team.png")%>
+               <p>彭新松</p>
+            </div>
+            <div class="teacher-info">
+               <%= image_tag("teach-team.png")%>
+               <p>彭新松</p>
+            </div>
+            <div class="teacher-info">
+               <%= image_tag("teach-team.png")%>
+               <p>彭新松</p>
+            </div>
+            <div class="teacher-info">
+               <%= image_tag("teach-team.png")%>
+               <p>彭新松</p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="related-courses">
+    <a href="javascript:void(0)" class="btn btn-primary">相关课程</a>
+    <ul class="courses-list">
+      <li class="col-sm-12">
+        <a href="" class="col-sm-6">项目一 初识IOS</a>
+        <a href class="col-sm-2">PPT (25页)</a>
+        <a href="" class="col-sm-2">已学 (10/25)</a>
+        <a href="" class="col-sm-2">测试</a>
+      </li>
+      <li class="col-sm-12">
+        <a href="" class="col-sm-8">项目一 初识IOS</a>
+        <a href class="col-sm-2">PPT (25页)</a>
+        <a href="" class="col-sm-2">已学 (10/25)</a>
+      </li>
+      <li class="col-sm-12">
+        <a href="" class="col-sm-8">项目一 初识IOS</a>
+        <a href class="col-sm-2">PPT (25页)</a>
+        <a href="" class="col-sm-2">已学 (10/25)</a>
+      </li>
+      <li class="col-sm-12">
+        <a href="" class="col-sm-8">项目一 初识IOS</a>
+        <a href class="col-sm-2">PPT (25页)</a>
+        <a href="" class="col-sm-2">已学 (10/25)</a>
+      </li>
+      <li class="col-sm-12">
+        <a href="" class="col-sm-8">项目一 初识IOS</a>
+        <a href class="col-sm-2">PPT (25页)</a>
+        <a href="" class="col-sm-2">已学 (10/25)</a>
+      </li>
+      <li class="col-sm-12">
+        <a href="" class="col-sm-8">项目一 初识IOS</a>
+        <a href class="col-sm-2">PPT (25页)</a>
+        <a href="" class="col-sm-2">已学 (10/25)</a>
+      </li>
+    </ul>
+    <%= link_to "展开", "javascript:void(0)", class: "drop-down-arrow"%>
+  </div>
+  <div class="category-list">
+    <a href="javascript:void(0)" class="index public-common-style">首页</a>
+    <a href="javascript:void(0)" class="material public-common-style">申报材料</a>
+    <a href="javascript:void(0)" class="setup public-common-style">课程设置</a>
+    <a href="javascript:void(0)" class="team public-common-style">教学队伍</a>
+    <a href="javascript:void(0)" class="condition public-common-style">教学条件</a>
+    <a href="javascript:void(0)" class="method public-common-style">教学方法</a>
+    <a href="javascript:void(0)" class="content public-common-style">教学内容</a>
+    <a href="javascript:void(0)" class="resource public-common-style">教学资源</a>
+    <a href="javascript:void(0)" class="effect public-common-style">教学效果</a>
+    <a href="javascript:void(0)" class="policy public-common-style">特色与政策</a>
+  </div>
+  <div class="category-list-content">
+    <a href="javascript:void(0)" class="btn btn-primary">课程设计理念</a>
+    <div class="text-content">
+      课程设计的理念
+    </div>
+    <div class="text-content">
+      申报材料
+    </div>
+    <div class="text-content">
+      课程设置
+    </div>
+    <div class="text-content">
+      教学队伍
+    </div>
+    <div class="text-content">
+      教学条件
+    </div>
+    <div class="text-content">
+      教学内容
+    </div>
+    <div class="text-content">
+      教学资源
+    </div>
+    <div class="text-content">
+      教学效果
+    </div>
+    <div class="text-content">
+      特色与政策
+    </div>
+  </div>
+  <div class="fast-entry">
+    <div class="fast-entry-links">
+      <a href="javascript:void(0)" class="btn btn-default">教学内容</a>
+      &nbsp;&nbsp;
+      <a href="javascript:void(0)" class="btn btn-default">教学方法</a>
+      &nbsp;&nbsp;
+      <a href="javascript:void(0)" class="btn btn-default">教学条件</a>
+      &nbsp;&nbsp;
+      <a href="javascript:void(0)" class="btn btn-default">教学效果</a>
+      &nbsp;&nbsp;
+      <a href="javascript:void(0)" class="btn btn-default">申报材料</a>
+    </div>
+    <div class="fast-entry-content">
+      <div class="entry-content">
+        教学内容
+      </div>
+      <div class="entry-content">
+        教学方法
+      </div>
+      <div class="entry-content">
+        教学条件
+      </div>
+      <div class="entry-content">
+        教学效果
+      </div>
+      <div class="entry-content">
+        申报材料
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="wrapper">
   <div class="col-sm-12 col-md-12">
     <div class="col-sm-4 col-md-4 pull-left">
       <%= image_tag("vedio-bg.png")%>
@@ -16,4 +184,4 @@
   <%= sub_course.content%>
   <%= link_to "测试", new_exam_path(sub_course_id: sub_course.id)%>
   </p>
-<%end%>
+<%end%> -->
