user css change

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -82,7 +82,7 @@ body.user__index, body.user__show, body.user__update {
   }
 
 
-  .navbar-left {
+  nav.navbar.navbar-default.nav-left {
     background-color: #fff;
   }
 
