--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -2,7 +2,7 @@
  <p class="text-primary self-info"><strong>个人中心</strong></p>
 
   <ul class="nav nav-pills nav-stacked center-block">
-    <li><%= link_to "我的课程", "#{}" %></li>
+    <li><%= link_to "我的课程", my_courses_user_index_path %></li>
     <li class=""><a href="#">我的考试</a></li>
     <li class=""><a href="#">成绩查询</a></li>
     <li class=""><a href="#">我的收藏</a></li>
