--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "variable";
 /*全局*/
 .wrapper {
 	width: 1200px;
@@ -7,41 +8,21 @@
 	overflow: hidden;
 }
 
-body {
-  background: #ebebeb;
-}
-
-button, p, a, h1, h2, h3, h4, h5, h6, form, ul, li {
-  margin: 0;
-  padding: 0;
-}
-
-ul, li {
-  list-style: none;
-}
-
-form {
-  display: inline;
-}
-
 header {
   nav.navbar-default {
-    background-color: #1a5aa0;
-
+    background-color: $main-color;
     ul.navbar-nav{
       margin-left: 20px;
       li {
         a {
-          background-color: #1a5aa0;
+          background-color: $main-color;
           color: #fff;
         }
-
         a:hover {
           background-color: #b0c4de;
           color: #fff;
         }
       }
-
       .active {
         a {
           background-color: #b0c4de;
@@ -52,8 +33,8 @@ header {
           color: #fff;
         }
       }
-    }   
-  }  
+    }
+  }
 }
 
 footer {
@@ -597,6 +578,16 @@ body.exams__new {
         line-height: 36px;
         padding-left:  60px;
       }
+    }
+    .tieshi {
+      width: 200px;
+      height: 565px;
+      position: fixed;
+      left: 50%;
+      margin-left: 220px;
+      top: 700px;
+      z-index: 2333;
+      background: image-url("tieshi-bg.png") no-repeat 0 0;
     }
   }
 }
