--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,10 @@
   <%= javascript_include_tag "slider.min", "_page_index" %>
 <%end%>
 
+<%= content_for :lunbo do %>
+  <%= render partial: "/common/lunbo"%>
+<%end%>
+
 <div class="main-content">
   <section class="common-title">
   	<span class="pull-left">精品课程</span>
