--- a/app/views/user/my_courses.html.erb
+++ b/app/views/user/my_courses.html.erb
@@ -1,143 +1,185 @@
-<div class="row">
+<%= content_for :script do %>
+  <%= javascript_include_tag "_user" %>
+<% end %>
+<div class="row user">
 
   <div class="col-md-2" role="complementary">
 	<%= render :partial => "nav_left" %>
   </div>
 
   <div class="col-md-10">
+
     <div class="row common-info">
       <%= render :partial => "base_info" %>
 	  </div>
 
 	  <div class="row self-main-context">
-	    <ul class="nav nav-tabs">
+
+	    <ul class="nav nav-pills show-content">
         <li role="presentation" class="active"><%= link_to "正在学习的课程","#" %></li>
         <li role="presentation"><%= link_to "完成的课程","#" %></li>
         <li role="presentation"><%= link_to "即将开始的课程","#" %></li>
       </ul>
-
-      <div class="container">
+      <!-- ###########################正在学习的课程########################## -->
+      <div class="container my-course-container div-content">
         <div class="row my-course">
           <div class="col-sm-3">
             <%= image_tag "my-course.png" %>
-            <!-- <span class="badge pull-right">3</span> -->
+            <span class="badge">7%</span>
           </div>
-          <div class="col-sm-9">
-            <div class="col-sm-8">
-              <div class="my-course-desc"> 
-                <h3>CSS实现网页平滑过渡效果<br>
-                  <small>
-                    <span class="text-success">18小时前更新至3-3</span> | 
-                    学习耗时：15分钟 |
-                    最后学习：32分钟
-                  </small>
-                </h3><br>
-                <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
-              </div>
+          <div class="col-sm-6">
+            <div class="my-course-desc"> 
+              <h4>CSS实现网页平滑过渡效果<br>
+                <small>
+                  <span class="text-success">18小时前更新至3-3</span> | 
+                  学习耗时：15分钟 |
+                  最后学习：32分钟
+                </small>
+              </h4><br>
+              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
-            <div class="col-sm-4">
+          </div>
+          <div class="col-sm-3">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
-          </div>
         </div>
 
         <div class="row my-course">
           <div class="col-sm-3">
             <%= image_tag "my-course.png" %>
-            <!-- <span class="badge pull-right">3</span> -->
+            <span class="badge">23%</span>
           </div>
-          <div class="col-sm-9">
-            <div class="col-sm-8">
-              <div class="my-course-desc"> 
-                <h3>CSS实现网页平滑过渡效果<br>
-                  <small>
-                    <span class="text-success">18小时前更新至3-3</span> | 
-                    学习耗时：15分钟 |
-                    最后学习：32分钟
-                  </small>
-                </h3><br>
-                <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
-              </div>
+          <div class="col-sm-6">
+            <div class="my-course-desc"> 
+              <h4>CSS实现网页平滑过渡效果<br>
+                <small>
+                  <span class="text-success">18小时前更新至3-3</span> | 
+                  学习耗时：15分钟 |
+                  最后学习：32分钟
+                </small>
+              </h4><br>
+              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
-            <div class="col-sm-4">
+          </div>
+          <div class="col-sm-3">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
-          </div>
         </div>
 
         <div class="row my-course">
           <div class="col-sm-3">
             <%= image_tag "my-course.png" %>
-            <!-- <span class="badge pull-right">3</span> -->
+            <span class="badge">23%</span>
           </div>
-          <div class="col-sm-9">
-            <div class="col-sm-8">
-              <div class="my-course-desc"> 
-                <h3>CSS实现网页平滑过渡效果<br>
-                  <small>
-                    <span class="text-success">18小时前更新至3-3</span> | 
-                    学习耗时：15分钟 |
-                    最后学习：32分钟
-                  </small>
-                </h3><br>
-                <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
-              </div>
+          <div class="col-sm-6">
+            <div class="my-course-desc"> 
+              <h4>CSS实现网页平滑过渡效果<br>
+                <small>
+                  <span class="text-success">18小时前更新至3-3</span> | 
+                  学习耗时：15分钟 |
+                  最后学习：32分钟
+                </small>
+              </h4><br>
+              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
-            <div class="col-sm-4">
+          </div>
+          <div class="col-sm-3">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
-          </div>
         </div>
 
         <div class="row my-course">
           <div class="col-sm-3">
             <%= image_tag "my-course.png" %>
-            <!-- <span class="badge pull-right">3</span> -->
+            <span class="badge">18%</span>
           </div>
-          <div class="col-sm-9">
-            <div class="col-sm-8">
-              <div class="my-course-desc"> 
-                <h3>CSS实现网页平滑过渡效果<br>
-                  <small>
-                    <span class="text-success">18小时前更新至3-3</span> | 
-                    学习耗时：15分钟 |
-                    最后学习：32分钟
-                  </small>
-                </h3><br>
-                <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
-              </div>
+          <div class="col-sm-6">
+            <div class="my-course-desc"> 
+              <h4>CSS实现网页平滑过渡效果<br>
+                <small>
+                  <span class="text-success">18小时前更新至3-3</span> | 
+                  学习耗时：15分钟 |
+                  最后学习：32分钟
+                </small>
+              </h4><br>
+              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
-            <div class="col-sm-4">
+          </div>
+          <div class="col-sm-3">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
-          </div>
         </div>
 
         <div class="row my-course">
           <div class="col-sm-3">
             <%= image_tag "my-course.png" %>
-            <!-- <span class="badge pull-right">3</span> -->
+            <span class="badge">13%</span>
           </div>
-          <div class="col-sm-9">
-            <div class="col-sm-8">
-              <div class="my-course-desc"> 
-                <h3>CSS实现网页平滑过渡效果<br>
-                  <small>
-                    <span class="text-success">18小时前更新至3-3</span> | 
-                    学习耗时：15分钟 |
-                    最后学习：32分钟
-                  </small>
-                </h3><br>
-                <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
-              </div>
+          <div class="col-sm-6">
+            <div class="my-course-desc"> 
+              <h4>CSS实现网页平滑过渡效果<br>
+                <small>
+                  <span class="text-success">18小时前更新至3-3</span> | 
+                  学习耗时：15分钟 |
+                  最后学习：32分钟
+                </small>
+              </h4><br>
+              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
-            <div class="col-sm-4">
+          </div>
+          <div class="col-sm-3">
               <button type="button" class="btn btn-success">开始学习</button>
+            </div>
+        </div>
+	    </div>
+      <!-- ###########################正在学习的课程########################## -->
+
+      <!-- ###########################完成的课程########################## -->
+      <div class="container my-course-container div-content">
+        <div class="row my-course">
+          <div class="col-sm-3">
+            <%= image_tag "my-course.png" %>
+          </div>
+          <div class="col-sm-7">
+            <div class="my-course-desc"> 
+              <h4>CSS实现网页平滑过渡效果<br>
+                <small>
+                  <span class="text-success">18小时前更新至3-3</span> | 
+                  学习耗时：15分钟 |
+                  最后学习：7分钟
+                </small>
+              </h4><br>
+              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
           </div>
         </div>
+      </div>
+      <!-- ###########################完成的课程########################## -->
 
-	  </div>
+      <!-- ###########################即将开始的课程########################## -->
+      <div class="container my-course-container div-content">
+        <div class="row my-course">
+          <div class="col-sm-3">
+            <%= image_tag "my-course.png" %>
+          </div>
+          <div class="col-sm-7">
+            <div class="my-course-desc"> 
+              <h4>CSS实现网页平滑过渡效果<br>
+                <small>
+                  <span class="text-success">18小时前更新至3-3</span> | 
+                  学习耗时：15分钟 |
+                  最后学习：7分钟
+                </small>
+              </h4><br>
+              <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ###########################即将开始的课程########################## -->
+
+    </div>
+
   </div>
 
 </div>
