--- a/app/views/user/my_courses.html.erb
+++ b/app/views/user/my_courses.html.erb
@@ -21,13 +21,13 @@
         <li role="presentation"><%= link_to "即将开始的课程","#" %></li>
       </ul>
       <!-- ###########################正在学习的课程########################## -->
-      <div class="container my-course-container div-content">
+      <div class="my-course-container div-content">
         <div class="row my-course">
-          <div class="col-sm-3">
+          <div class="col-sm-3 ov-hidden">
             <%= image_tag "my-course.png" %>
             <span class="badge">7%</span>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <div class="my-course-desc"> 
               <h4>CSS实现网页平滑过渡效果<br>
                 <small>
@@ -39,17 +39,17 @@
               <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
         </div>
 
         <div class="row my-course">
-          <div class="col-sm-3">
+          <div class="col-sm-3 ov-hidden">
             <%= image_tag "my-course.png" %>
             <span class="badge">23%</span>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <div class="my-course-desc"> 
               <h4>CSS实现网页平滑过渡效果<br>
                 <small>
@@ -61,17 +61,17 @@
               <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
         </div>
 
         <div class="row my-course">
-          <div class="col-sm-3">
+          <div class="col-sm-3 ov-hidden">
             <%= image_tag "my-course.png" %>
             <span class="badge">23%</span>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <div class="my-course-desc"> 
               <h4>CSS实现网页平滑过渡效果<br>
                 <small>
@@ -83,17 +83,17 @@
               <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
         </div>
 
         <div class="row my-course">
-          <div class="col-sm-3">
+          <div class="col-sm-3 ov-hidden">
             <%= image_tag "my-course.png" %>
             <span class="badge">18%</span>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <div class="my-course-desc"> 
               <h4>CSS实现网页平滑过渡效果<br>
                 <small>
@@ -105,17 +105,17 @@
               <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
         </div>
 
         <div class="row my-course">
-          <div class="col-sm-3">
+          <div class="col-sm-3 ov-hidden">
             <%= image_tag "my-course.png" %>
             <span class="badge">13%</span>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-7">
             <div class="my-course-desc"> 
               <h4>CSS实现网页平滑过渡效果<br>
                 <small>
@@ -127,7 +127,7 @@
               <p>本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....本课程为Android消息推送的进阶篇，本课程重点讲解....</p>
             </div>
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
               <button type="button" class="btn btn-success">开始学习</button>
             </div>
         </div>
@@ -135,12 +135,12 @@
       <!-- ###########################正在学习的课程########################## -->
 
       <!-- ###########################完成的课程########################## -->
-      <div class="container my-course-container div-content">
+      <div class="my-course-container div-content" style="display: none;">
         <div class="row my-course">
-          <div class="col-sm-3">
+          <div class="col-sm-3 ov-hidden">
             <%= image_tag "my-course.png" %>
           </div>
-          <div class="col-sm-7">
+          <div class="col-sm-9">
             <div class="my-course-desc"> 
               <h4>CSS实现网页平滑过渡效果<br>
                 <small>
@@ -157,12 +157,12 @@
       <!-- ###########################完成的课程########################## -->
 
       <!-- ###########################即将开始的课程########################## -->
-      <div class="container my-course-container div-content">
+      <div class="my-course-container div-content" style="display: none;">
         <div class="row my-course">
-          <div class="col-sm-3">
+          <div class="col-sm-3 ov-hidden">
             <%= image_tag "my-course.png" %>
           </div>
-          <div class="col-sm-7">
+          <div class="col-sm-9">
             <div class="my-course-desc"> 
               <h4>CSS实现网页平滑过渡效果<br>
                 <small>
