--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -8,12 +8,12 @@
       <% end %>
     </li>
     <li>
-      <%= link_to "#" do %>
+      <%= link_to my_exams_user_index_path do %>
       	<span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 我的考试
       <% end %>
     </li>
      <li>
-      <%= link_to "#" do %>
+      <%= link_to score_search_user_index_path do %>
       	<span class="glyphicon glyphicon-search" aria-hidden="true"></span> 成绩查询
       <% end %>
     </li>
