--- a/app/views/user/score_search.html.erb
+++ b/app/views/user/score_search.html.erb
@@ -20,12 +20,28 @@
       </ul>
 
       <div class="div-content scoure-search">
+
         <div class="row score-list">
           <div class="col-sm-6">
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
-                <div class="col-sm-5"></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
               </div>
             </div>
           </div>
@@ -34,7 +50,222 @@
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
-                <div class="col-sm-5"></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row score-list">
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row score-list">
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row score-list">
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row score-list">
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
+                <div class="col-sm-5">
+                  <h4>前段自动化工具</h4>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    时间：2015-08-28
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    总分：100分
+                  </div>
+                  <div class="score-detail">
+                    <span class="text-primary">&bull;</span>
+                    得分：80分
+                  </div>
+                  <button type="button" class="btn btn-warning">查看试卷</button>
+                </div>
               </div>
             </div>
           </div>
